// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`base > add extra css options 1`] = `
":root {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

:root, [data-theme] {
  background-color: theme(colors.base-100);
  color: theme(colors.base-content);
}

@supports not (color: oklch(0 0 0)) {
  :root {
    color-scheme: light;
    --ice-fallback-p: #491eff;
    --ice-fallback-pc: #d4dbff;
    --ice-fallback-s: #ff41c7;
    --ice-fallback-sc: #fff9fc;
    --ice-fallback-a: #00cfbd;
    --ice-fallback-ac: #00100d;
    --ice-fallback-n: #2b3440;
    --ice-fallback-nc: #d7dde4;
    --ice-fallback-b1: #ffffff;
    --ice-fallback-b2: #e5e6e6;
    --ice-fallback-b3: #e5e6e6;
    --ice-fallback-bc: #1f2937;
    --ice-fallback-in: #00b3f0;
    --ice-fallback-inc: #000000;
    --ice-fallback-su: #00ca92;
    --ice-fallback-suc: #000000;
    --ice-fallback-wa: #ffc22d;
    --ice-fallback-wac: #000000;
    --ice-fallback-er: #ff6f70;
    --ice-fallback-erc: #000000;
  }
  @media (prefers-color-scheme: dark) {
    :root {
      color-scheme: dark;
      --ice-fallback-p: #7582ff;
      --ice-fallback-pc: #050617;
      --ice-fallback-s: #ff71cf;
      --ice-fallback-sc: #190211;
      --ice-fallback-a: #00c7b5;
      --ice-fallback-ac: #000e0c;
      --ice-fallback-n: #2a323c;
      --ice-fallback-nc: #a6adbb;
      --ice-fallback-b1: #1d232a;
      --ice-fallback-b2: #191e24;
      --ice-fallback-b3: #15191e;
      --ice-fallback-bc: #a6adbb;
      --ice-fallback-in: #00b3f0;
      --ice-fallback-inc: #000000;
      --ice-fallback-su: #00ca92;
      --ice-fallback-suc: #000000;
      --ice-fallback-wa: #ffc22d;
      --ice-fallback-wac: #000000;
      --ice-fallback-er: #ff6f70;
      --ice-fallback-erc: #000000;
    }
  }
}"
`;

exports[`base > add new theme case 0 1`] = `
".light {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.fuck {
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-a: 18 52 86;
}

.shit {
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-b: 101 67 33;
}"
`;

exports[`base > add new theme case 1 1`] = `
".light {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.fuck {
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-a: 18 52 86;
  backgroud-color: red;
}

.shit {
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-b: 101 67 33;
  backgroud-color: yellow;
}"
`;

exports[`base > snap 1`] = `
":root {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

[data-mode=dark] {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}"
`;

exports[`base > snap case 1 1`] = `
".light {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}"
`;
